# my-tasks

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  api.http  db.sqlite3  entrypoint.sh  pyproject.toml
backend/my_tasks/: asgi.py  settings.py  urls.py  wsgi.py
backend/tasks/: admin.py  models.py  serializers.py  urls.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_remove_team_projects_remove_team_members_and_more.py  0003_alter_task_assigned_user.py  0004_remove_task_assigned_user_remove_task_author_and_more.py
backend/tasks/scripts/: orm_script.py
backend/users/: authentication.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py
frontend/: Dockerfile  package-lock.json
frontend/src/: styles.css
frontend/src/app/: app.routes.ts
frontend/src/app/features/auth/login/: login.component.css  login.component.html  login.component.ts
frontend/src/app/features/auth/register/: register.component.html  register.component.ts
